# Exercise1_1

./: .gitignore
Lesson1/Task1/: 1_1  1_1.cpp  Task1.md
Lesson1/Task2/: 1_2  1_2.cpp  Task2  Task2.cpp
Lesson1/Task3/: 1_3  1_3.cpp
Lesson10/1/: 10_1  10_1.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  my_first_cmake_program
Lesson10/2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  equilateral_triangle.cpp  equilateral_triangle.h  exception.h  figure.cpp  figure.h  main.cpp  quadrangle.cpp  rectangle.cpp  right_triangle.cpp  right_triangle.h  run_figures  square.h  triangle.h
Lesson11/Coursework/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  race.sln  race.vcxproj  race.vcxproj.filters
Lesson11/Task3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  farewell.sln  farewell.vcxproj  farewell.vcxproj.filters  main.cpp
Lesson11/Task4/: 8_2.cpp
Lesson11/Task5/: 8_2.cpp  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  figures.sln  figures.vcxproj  figures.vcxproj.filters
Lesson11/Task5/dynamic_lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  equilateral_triangle.h  figure.h  figure_lib.sln  figure_lib.vcxproj  figure_lib.vcxproj.filters  isosceles_triangle.h  parallelogramm.cpp  quadrangle.h  romb.h  square.h  triangle.cpp
Lesson7/: 7_1.cpp  7_2.cpp
Lesson8/: 8_1.cpp
Lesson9/: 9_1.cpp
(+112 files in other folders)
